Add some text and layout

--- a/frontpage.html
+++ b/frontpage.html
@@ -1,3 +1,10 @@
-<div class="container">
-  <h2>Welcome to this Moodle</h2>
+<div class="jumbotron text-center">
+  <h1>>Bienvenue dans ce Moodl"</h1>
+  <p>Test en cours sur une insertion de première page</p>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+Ici une imagee JOPG
+</div>
+</div></div>
