--- a/frontpage.html
+++ b/frontpage.html
@@ -5,6 +5,6 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-Ici une imagee JOPG
+Ici une imagee JOPG ou ...
 </div>
 </div></div>
